--- a/project/index.html
+++ b/project/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>❤️介紹</title>
-        <script src="/config.js"></script>
+        <title>方音圖鑒</title>
+        <script src="config.js"></script>
     </head>
 
 
