完成前端查詢新界面

--- a/project/menu/index.html
+++ b/project/menu/index.html
@@ -4,8 +4,8 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <title>方音圖鑒</title>
-        <script src="config.js"></script>
+        <title>方音圖鑒 - 菜單</title>
+        <script src="../config.js"></script>
     </head>
 
 
@@ -17,6 +17,6 @@
 <!--            src="/detail/index.html"-->
 <!--            style="width: 0; height: 0; border: none;"-->
 <!--    ></iframe>-->
-    <script type="module" src="./src/main.js"></script>
+    <script type="module" src="@/main.js"></script>
   </body>
 </html>
