表格彈窗、搜索邏輯優化

--- a/project/index.html
+++ b/project/index.html
@@ -5,18 +5,25 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <title>方音圖鑑</title>
+        <!-- SEO: description -->
+        <meta name="description" content="方音圖鑑深入分析中古地位、方言比較、地理語言學，呈現各方言點的聲韻層次及音位分合。
+    支持：按中古地位整理讀音、分析音位的中古來源、查詢調值調類、查詢漢字讀音、用戶自定義繪圖等。">
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "WebSite",
+                "name": "方音圖鑑",
+                "alternateName": "Chinese Dialect Atlas",
+                "url": "https://dialects.yzup.top/"
+            }
+        </script>
         <script src="config.js"></script>
     </head>
 
 
   <body>
     <div id="app" ></div>
-<!--    &lt;!&ndash; ✅ 永久存在的 iframe：原生 JS 頁面 &ndash;&gt;-->
-<!--    <iframe-->
-<!--            id="native-frame"-->
-<!--            src="/detail/index.html"-->
-<!--            style="width: 0; height: 0; border: none;"-->
-<!--    ></iframe>-->
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
