自然村、中古汉字树状图

--- a/project/public/detail/index.html
+++ b/project/public/detail/index.html
@@ -340,6 +340,7 @@
                 <!--                    <h4>详细信息</h4>-->
                 <p id="location-name"></p>
                 <p id="feature"></p>
+                <p id="phonology"></p>
                 <p id="detail-content"></p>
                 <p id="notes1"></p>
                 <button id="mini-btn" class="mini-button">🔍詳情</button>
@@ -439,6 +440,10 @@
                 <div class="form-row">
                     <label for="coordinates-input">經緯度:</label>
                     <input type="text" id="coordinates-input" name="coordinates" placeholder="點擊地圖自動填入經緯度" autocomplete="off">
+                </div>
+                <div class="form-row">
+                    <label for="phonology-input">聲韻調:</label>
+                    <input type="text" id="phonology-input" name="phonology" placeholder="請輸入聲韻調" autocomplete="off">
                 </div>
                 <div class="form-row">
                     <label for="feature-input">特徵:</label>
